fix column spacing on mobile for center alignment of logo

--- a/assets/base.css
+++ b/assets/base.css
@@ -2307,11 +2307,14 @@ input[type='checkbox'] {
 .header {
   display: grid;
   grid-template-areas: 'left-icon heading icons';
-  grid-template-columns: 1fr 2fr 1fr;
+  grid-template-columns: auto 2fr 1fr;
   align-items: center;
 }
 
 @media screen and (min-width: 990px) {
+  .header {
+    grid-template-columns: 1fr 2fr 1fr;
+  }
   .header--top-left,
   .header--middle-left:not(.header--has-menu) {
     grid-template-areas:
